Add styles, assets, and variables

--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Landing</title>
   </head>
   <body>
-    <h1 class="text">Hello World</h1>
+    <!--begin::Header-->
+    <header></header>
+    <!--end::Header-->
+
+    <!--begin::Main-->
+    <main></main>
+    <!--end::Main-->
+
+    <!--begin::Footer-->
+    <footer></footer>
+    <!--end::Footer-->
   </body>
 </html>
