added many sections

--- a/index.html
+++ b/index.html
@@ -14,11 +14,118 @@
   </head>
   <body>
     <!--begin::Header-->
-    <header></header>
+    <header class="header">
+      <div class="container">
+        <nav class="header__navbar">
+          <div class="navbar__items">
+            <a href="#" class="navbar__link">Home</a>
+            <a href="#" class="navbar__link">About</a>
+            <a href="#" class="navbar__link">Contact</a>
+          </div>
+          <a href="#">
+            <img src="assets/logo.svg" alt="Logo" />
+          </a>
+          <a href="#" class="button">Buy Now</a>
+        </nav>
+        <section class="hero">
+          <h1 class="hero__title">
+            Introduce Your Product Quickly & Effectively
+          </h1>
+          <p class="hero__text">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+            commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+            penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
+            Nulla consequat massa quis enim.
+          </p>
+          <div class="hero__buttons">
+            <button class="button">Purchase UI Kit</button>
+            <button class="outline-button">Learn More</button>
+          </div>
+        </section>
+      </div>
+    </header>
     <!--end::Header-->
 
     <!--begin::Main-->
-    <main></main>
+    <main>
+      <div class="container">
+        <section class="intro">
+          <div class="intro__content">
+            <h2 class="main-title">Light, Fast & Powerful</h2>
+            <p class="main-text">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+              penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+              Donec quam felis, ultricies nec, pellentesque eu, pretium quis,
+              sem. Nulla consequat massa quis enim.
+            </p>
+            <div class="intro__info">
+              <div class="info__wrapper">
+                <img src="assets/icons/architect.svg" alt="Architecture icon" />
+                <h3 class="info__title">Title Goes Here</h3>
+                <p class="info__text">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                  Aenean commodo ligula eget dolor.
+                </p>
+              </div>
+              <div class="info__wrapper">
+                <img src="assets/icons/architect.svg" alt="Architecture icon" />
+                <h3 class="info__title">Title Goes Here</h3>
+                <p class="info__text">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                  Aenean commodo ligula eget dolor.
+                </p>
+              </div>
+            </div>
+          </div>
+          <img src="assets/images/first-section.png" alt="Intro" />
+        </section>
+
+        <section class="info">
+          <img src="assets/images/second-section.png" alt="Info" />
+          <div class="info__content">
+            <h3 class="main-title">Light, Fast & Powerful</h3>
+            <p class="main-text">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+              penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+              Donec quam felis, ultricies nec, pellentesque eu, pretium quis,
+              sem. Nulla consequat massa quis enim.
+            </p>
+          </div>
+        </section>
+
+        <section class="info">
+          <img src="assets/images/third-section.png" alt="Info" />
+          <div class="info__content">
+            <h3 class="main-title">Light, Fast & Powerful</h3>
+            <p class="main-text">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+              penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+              Donec quam felis, ultricies nec, pellentesque eu, pretium quis,
+              sem. Nulla consequat massa quis enim.
+            </p>
+          </div>
+        </section>
+
+        <section class="info">
+          <img src="assets/images/fourth-section.png" alt="Info" />
+          <div class="info__content">
+            <h3 class="main-title">Light, Fast & Powerful</h3>
+            <p class="main-text">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+              penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+              Donec quam felis, ultricies nec, pellentesque eu, pretium quis,
+              sem. Nulla consequat massa quis enim.
+            </p>
+            <button class="button">Purchase Now</button>
+          </div>
+        </section>
+      </div>
+    </main>
     <!--end::Main-->
 
     <!--begin::Footer-->
